[project]
name = "fujidb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.3",
    "spotipy>=2.25.1",
    "tqdm>=4.67.1",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.10.22",
]
